# test_assignment

./: Dockerfile  Makefile  alembic.ini  local.docker-compose.yaml  manage.py  mypy.ini  pylintrc  pyproject.toml  pytest.ini  setup.py
contracts/schemas/: notification.py  task.py  user.py
event_sourcing/: entity.py  event_store_client.py
power_plant_construction/: db.py  event_store.py  version.py
power_plant_construction/api/: __init__.py  api_config.py  api_factory.py  auth.py
power_plant_construction/api/resources/: notifications.py  tasks.py
power_plant_construction/app/: app_config.py  notification_service.py  run.py
power_plant_construction/commands/notification/: create.py  mark_read.py
power_plant_construction/commands/task/: add_dependency.py  create.py  remove_dependency.py  update_status.py
power_plant_construction/entities/: notification.py  task.py  user.py
power_plant_construction/migrations/: env.py  migrations_config.py
power_plant_construction/migrations/versions/: init_db.py
power_plant_construction/repositories/: notification.py  task.py  user.py
